Fix pricing box alignment with longer text
Fixes #637

--- a/weblate_web/static/style-rtl.css
+++ b/weblate_web/static/style-rtl.css
@@ -1104,26 +1104,34 @@ section.pricing .box .box-price {
   text-align: center;
   width: 100%;
   min-height: 150px;
-  padding-top: 45px;
   position: relative;
   text-transform: uppercase;
 }
 
-section.pricing .box .box-price span {
+section.pricing .box .box-price .save {
   color: #f6664c;
   font-size: 20px;
   font-weight: 600;
-  position: absolute;
-  top: 0;
   letter-spacing: 0.5px;
   text-transform: none;
+  display: block;
+  padding-bottom: 5px;
+}
+section.pricing .box .box-price .period {
+  display: block;
+  padding-top: 10px;
+  padding-bottom: -5px;
 }
 
+section.pricing .box .first .box-price strong {
+  padding-top: 45px;
+}
 section.pricing .box .box-price strong {
   font-size: 50px;
   letter-spacing: -1px;
   text-transform: none;
   font-weight: 400;
+  display: block;
 }
 
 section.pricing .box .box-price a {
